some more notebook work

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,12 +54,11 @@
     "import os\n",
     "import typing\n",
     "from typing import Any, Self\n",
-    "\n",
+    "import typing\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import numpy.typing as npt\n",
-    "\n",
-    "\n",
+    "import types\n",
     "\n",
     "_ROOT_DIR = os.path.abspath(os.path.dirname(os.path.abspath(__file__)))\n",
     "PATH_TO_SEVIR = os.getenv(\"PATH_TO_SEVIR\", _ROOT_DIR)\n",
@@ -163,37 +162,53 @@
     "    \"data_min\",\n",
     "    \"data_max\",\n",
     "    \"pct_missing\",\n",
-    ")"
+    ")\n",
+    "\n",
+    "CATALOG_DTYPES = {\n",
+    "    ID: \"string\",\n",
+    "    EVENT_ID: \"Int64\",\n",
+    "    IMAGE_TYPE: \"string\",\n",
+    "    PROJ: \"string\",\n",
+    "    FILE_NAME: \"string\",\n",
+    "    EVENT_TYPE: \"string\",\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(img_type\n",
-       " vis       vis/2018/SEVIR_VIS_STORMEVENTS_2018_0201_0228.h5\n",
-       " ir069    ir069/2018/SEVIR_IR069_STORMEVENTS_2018_0101_0...\n",
-       " ir107    ir107/2018/SEVIR_IR107_STORMEVENTS_2018_0101_0...\n",
-       " Name: file_name, dtype: string,\n",
-       " img_type\n",
-       " vil     vil/2018/SEVIR_VIL_STORMEVENTS_2018_0101_0630.h5\n",
-       " lght    lght/2018/SEVIR_LGHT_ALLEVENTS_2018_0201_0301.h5\n",
-       " Name: file_name, dtype: string)"
-      ]
-     },
-     "execution_count": 214,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "img_type\n",
+      "vis      /home/jupyter/data/sevir/vis/2018/SEVIR_VIS_ST...\n",
+      "ir069    /home/jupyter/data/sevir/ir069/2018/SEVIR_IR06...\n",
+      "ir107    /home/jupyter/data/sevir/ir107/2018/SEVIR_IR10...\n",
+      "Name: file_name, dtype: object img_type\n",
+      "vil     /home/jupyter/data/sevir/vil/2018/SEVIR_VIL_ST...\n",
+      "lght    /home/jupyter/data/sevir/lght/2018/SEVIR_LGHT_...\n",
+      "Name: file_name, dtype: object\n"
+     ]
     }
    ],
    "source": [
+    "def html(obj) -> str:\n",
+    "    if not hasattr(obj, \"_repr_html_\"):\n",
+    "        return repr(obj)\n",
+    "    return obj._repr_html_()\n",
+    "\n",
+    "\n",
     "class SEVIRBase:\n",
     "    __slots__ = (\"_values\", \"_index\")\n",
     "    _values: pd.DataFrame\n",
+    "    _index: pd.MultiIndex\n",
+    "\n",
+    "    def __init__(self, values: pd.DataFrame) -> None:\n",
+    "        self._values = values\n",
+    "        self._index = values.index\n",
     "\n",
     "    @property\n",
     "    def values(self) -> pd.DataFrame:\n",
@@ -201,38 +216,37 @@
     "\n",
     "    @property\n",
     "    def index(self) -> pd.MultiIndex:\n",
-    "        return self.values.index\n",
+    "        return self._index.copy()\n",
+    "\n",
+    "    @property\n",
+    "    def loc(self):\n",
+    "        return SEVIRBase(self._values)\n",
     "\n",
     "    def __repr__(self) -> str:\n",
     "        return repr(self._values)\n",
     "\n",
     "    def _repr_html_(self) -> str:\n",
-    "        return self._values._repr_html_()\n",
+    "        return html(self._values)\n",
     "\n",
     "    def __getitem__(self, idx: int | list[int] | slice) -> pd.DataFrame:\n",
     "        return self._values.loc[idx]\n",
     "\n",
     "\n",
     "class SEVIRCatalog(SEVIRBase):\n",
-    "    dtypes = {\n",
-    "        ID: \"string\",\n",
-    "        EVENT_ID: \"Int64\",\n",
-    "        IMAGE_TYPE: \"string\",\n",
-    "        PROJ: \"string\",\n",
-    "        FILE_NAME: \"string\",\n",
-    "        EVENT_TYPE: \"string\",\n",
-    "    }\n",
-    "\n",
     "    def __init__(\n",
     "        self,\n",
-    "        catalog: str = \"CATALOG.csv\",\n",
-    "        image_types: set[SEVIRTypes] = set(SEVIRTypes),\n",
-    "        shuffle: bool = False,\n",
+    "        catalog: str | pd.DataFrame,\n",
+    "        *,\n",
+    "        image_types: set[SEVIRTypes],\n",
+    "        shuffle: int | None = None,\n",
     "    ) -> None:\n",
-    "        df = self._read_catalog(catalog, image_types)\n",
+    "        if isinstance(catalog, pd.DataFrame):\n",
+    "            df = catalog\n",
+    "        else:\n",
+    "            df = self._read_catalog(catalog, image_types)\n",
     "        if shuffle:\n",
     "            df = df.sample(frac=1)\n",
-    "        self._values, self._index = df, typing.cast(pd.MultiIndex, df.index)\n",
+    "        super().__init__(df)\n",
     "\n",
     "    def _read_catalog(self, catalog: str, image_types: set[SEVIRTypes]) -> pd.DataFrame:\n",
     "        df = (\n",
@@ -240,7 +254,7 @@
     "                catalog,\n",
     "                parse_dates=[TIME_UTC],\n",
     "                low_memory=False,\n",
-    "                dtype=self.dtypes,\n",
+    "                dtype=CATALOG_DTYPES,\n",
     "            )\n",
     "            .drop(columns=[PROJ])\n",
     "            .drop_duplicates()\n",
@@ -256,32 +270,95 @@
     "        # lastly mask out the index to only include the IDs that have all of the image types\n",
     "        return df.loc[mask[mask].index, :].set_index(IMG_TYPE, append=True)\n",
     "\n",
+    "    def prefix(self, o: str) -> SEVIRCatalog:\n",
+    "        self._values[FILE_NAME] = [os.path.join(o, p) for p in self._values[FILE_NAME]]\n",
+    "        return self\n",
+    "\n",
+    "    def get_paths(self) -> pd.Series[str]:\n",
+    "        return self._values[FILE_NAME]\n",
+    "\n",
+    "    def validate_paths(self) -> SEVIRCatalog:\n",
+    "        for file in self.get_paths():\n",
+    "            if not os.path.exists(file):\n",
+    "                raise FileNotFoundError(file)\n",
+    "\n",
+    "    def split(\n",
+    "        self,\n",
+    "        x: list[SEVIRTypes],\n",
+    "        y: list[SEVIRTypes],\n",
+    "    ) -> tuple[SEVIRCatalog, SEVIRCatalog]:\n",
+    "        x_df = self.loc[pd.IndexSlice[:, x], :]\n",
+    "        y_df = self.loc[pd.IndexSlice[:, y], :]\n",
+    "        return SEVIRCatalog(x_df, image_types=set(x)), SEVIRCatalog(\n",
+    "            y_df, image_types=set(y)\n",
+    "        )\n",
+    "\n",
     "\n",
     "class SEVIRLoader:\n",
-    "    inputs: pd.DataFrame\n",
-    "    features: pd.DataFrame\n",
+    "    inputs: SEVIRCatalog\n",
+    "    features: SEVIRCatalog\n",
     "\n",
     "    def __init__(\n",
     "        self,\n",
     "        inputs: list[SEVIRTypes],\n",
     "        features: list[SEVIRTypes],\n",
-    "        /,\n",
+    "        *,\n",
+    "        path_to_sevir: str | None = None,\n",
+    "        catalog: str = \"CATALOG.csv\",\n",
+    "        shuffle: int = 0,\n",
+    "        validate_paths: bool = False,\n",
     "    ) -> None:\n",
-    "        cat = SEVIRCatalog(image_types=set(inputs + features))\n",
-    "        self.inputs = cat[pd.IndexSlice[:, inputs], :]\n",
-    "        self.features = cat[pd.IndexSlice[:, features], :]\n",
+    "        cat = SEVIRCatalog(catalog, image_types=set(inputs + features), shuffle=shuffle)\n",
+    "\n",
+    "        if path_to_sevir is not None:\n",
+    "            cat.prefix(path_to_sevir)\n",
+    "        if validate_paths:\n",
+    "            cat = cat.validate_paths()\n",
+    "\n",
+    "        # TODO: reindex the DataFrame so that the ID's are [0, ..., len(cat.index.get_level_values(ID).unique()) - 1]\n",
+    "        self.index = cat.index.get_level_values(ID).unique()\n",
+    "        self.inputs, self.features = cat.split(inputs, features)\n",
+    "        self.cat = cat\n",
     "\n",
     "    def get_batch(self, idx: int) -> tuple[pd.Series, pd.Series]:\n",
-    "        inputs = self.inputs.loc[idx, FILE_NAME]\n",
-    "        features = self.features.loc[idx, FILE_NAME]\n",
-    "        return inputs, features\n",
+    "        inputs = self.inputs.loc[idx, :]\n",
+    "        features = self.features.loc[idx, :]\n",
+    "        return inputs[FILE_NAME], features[FILE_NAME]\n",
+    "\n",
+    "    def __getitem__(self, idx: int) -> tuple[pd.Series, pd.Series]:\n",
+    "        return self.get_batch(self.index[idx])\n",
+    "\n",
+    "    def __len__(self) -> int:\n",
+    "        return len(self.index)\n",
+    "\n",
+    "    def _repr_html_(self):\n",
+    "        return f\"\"\"\\\n",
+    "<h3>inputs</h3>\n",
+    "{html(self.inputs)}\n",
+    "<h3>features</h3>\n",
+    "{html(self.features)}\"\"\"\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"\"\"\\\n",
+    "[inputs]\n",
+    "{repr(self.inputs)}\n",
+    "[features]\n",
+    "{repr(self.features)}\"\"\"\n",
+    "\n",
+    "    def __iter__(self) -> tuple[pd.Series, pd.Series]:\n",
+    "        yield from (self.get_batch(idx) for idx in self.index)\n",
     "\n",
     "\n",
     "loader = SEVIRLoader(\n",
     "    [SEVIRTypes.VISIBLE, SEVIRTypes.IR_069, SEVIRTypes.IR_107],\n",
     "    [SEVIRTypes.VERTICALLY_INTEGRATED_LIQUID, SEVIRTypes.LIGHTNING],\n",
+    "    path_to_sevir=\"/home/jupyter/data/sevir\",\n",
+    "    catalog=\"CATALOG.csv\",\n",
+    "    shuffle=0,\n",
     ")\n",
-    "loader.get_batch(730231)"
+    "for feature, inputs in loader:\n",
+    "    print(feature, inputs)\n",
+    "    break"
    ]
   }
  ],
