--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -20,7 +20,7 @@
     "from __future__ import annotations\n",
     "\n",
     "try:\n",
-    "    __file__\n",
+    "    __file__ # type: ignore\n",
     "except NameError:\n",
     "    __file__ = __vsc_ipynb_file__  # type: ignore\n",
     "import os\n",
@@ -72,7 +72,6 @@
     "    IR_107,\n",
     "    VERTICALLY_INTEGRATED_LIQUID,\n",
     "    LIGHTNING,\n",
-    "    SEVIRImageType,\n",
     "    DEFAULT_N_FRAMES,\n",
     "    DEFAULT_FRAME_TIMES,\n",
     "    PATH_TO_SEVIR,\n",
@@ -80,6 +79,8 @@
     "    DEFAULT_DATA_HOME,\n",
     "    DEFAULT_N_FRAMES,\n",
     "    CATALOG_DTYPES,\n",
+    "    SEVIRImageType,\n",
+    "    SEVIRCatalog,\n",
     ")\n",
     "\n",
     "assert all(os.path.exists(p) for p in [DEFAULT_CATALOG, DEFAULT_DATA_HOME])"
