--- a/notebooks/polars.ipynb
+++ b/notebooks/polars.ipynb
@@ -88,8 +88,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "909 ms ± 31.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "1.15 s ± 30.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "912 ms ± 59.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "1.19 s ± 24.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -226,7 +226,7 @@
     }
    ],
    "source": [
-    "img_types = [\"vis\", \"ir069\"]\n",
+    "img_types = [\"vis\", \"ir069\"]  # the image types we want to keep\n",
     "df = df.filter(df[IMG_TYPE].is_in(img_types))\n",
     "assert df[IMG_TYPE].n_unique() == len(set(img_types))\n",
     "count = df.groupby(ID).count()\n",
@@ -300,6 +300,13 @@
     "\n",
     "sevir.catalog.read(SEVIR_CATALOG, SEVIR_DATA, img_types=[VIS, IR_069, IR_107]).head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
