--- a/notebooks/1-sevir-dataset.ipynb
+++ b/notebooks/1-sevir-dataset.ipynb
@@ -389,7 +389,7 @@
      "output_type": "stream",
      "text": [
       "INFO:root:Loading 93 files with 2 image types.\n",
-      "100%|██████████| 93/93 [00:02<00:00, 32.71it/s]"
+      "100%|██████████| 93/93 [00:02<00:00, 34.35it/s]"
      ]
     },
     {
@@ -447,7 +447,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "random id: R18082305307548\n",
+      "random id: R19043015108133\n",
       "(ImageType.VIS, ImageType.VIL)\n",
       "vis: (768, 768, 49), vil: (384, 384, 49)\n"
      ]
@@ -583,7 +583,7 @@
      "output_type": "stream",
      "text": [
       "INFO:root:Loading 132 files with 5 image types.\n",
-      "100%|██████████| 132/132 [00:02<00:00, 61.06it/s]\n"
+      "100%|██████████| 132/132 [00:02<00:00, 60.53it/s]\n"
      ]
     }
    ],
@@ -605,7 +605,7 @@
      "output_type": "stream",
      "text": [
       "INFO:root:Loading 132 files with 5 image types.\n",
-      "100%|██████████| 132/132 [00:01<00:00, 93.29it/s] \n"
+      "100%|██████████| 132/132 [00:01<00:00, 92.97it/s] \n"
      ]
     },
     {
@@ -662,13 +662,13 @@
      "output_type": "stream",
      "text": [
       "INFO:root:Loading 112 files with 3 image types.\n",
-      "100%|██████████| 112/112 [00:01<00:00, 86.99it/s] \n"
+      "100%|██████████| 112/112 [00:01<00:00, 83.44it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa3acbd8040>"
+       "<matplotlib.image.AxesImage at 0x7f35ccc1f970>"
       ]
      },
      "execution_count": 14,
@@ -690,42 +690,41 @@
     "import sevir.core.h5\n",
     "\n",
     "with sevir.Store(sevir.Catalog(\"/mnt/data/sevir\", img_types=(VIS, VIL, LGHT))) as h5:\n",
-    "    vis_1, vil_1, lght_1 = h5.select(\"S858968\", img_types=(VIS, VIL, LGHT))\n",
-    "    patch_size = max(vil_1.shape[:2])\n",
-    "    # interp_stack will interpolate all of the images_types in the catalog to the provided patch size\n",
-    "    stack = h5.interp_stack(\"S858968\", patch_size=patch_size)\n",
+    "    vis1, vil1, lght1 = h5.select(\"S858968\", img_types=(VIS, VIL, LGHT))  # list[(Height, Width, Time)]\n",
+    "    patch_size = max(vil1.shape[:2])\n",
+    "    # interp_stack will interpolate all of the images_types in the catalog to the provided patch size and stack them with a new dimension for the channel\n",
+    "    stack1 = h5.interp_stack(\"S858968\", patch_size=patch_size)  # (Channel, Height, Width, Time)\n",
     "\n",
     "\n",
-    "vis_2 = sevir.core.h5.interpatch(vis_1, patch_size=patch_size)\n",
-    "vil_2 = sevir.core.h5.interpatch(vil_1, patch_size=patch_size)\n",
-    "lght_2 = sevir.core.h5.interpatch(lght_1, patch_size=patch_size)\n",
+    "vis2 = sevir.core.h5.interpatch(vis1, patch_size=patch_size)\n",
+    "vil2 = sevir.core.h5.interpatch(vil1, patch_size=patch_size)\n",
+    "lght2 = sevir.core.h5.interpatch(lght1, patch_size=patch_size)\n",
     "\n",
     "# the original image are not the same shape in the (x, y) dimensions\n",
-    "assert vis_1.shape != vil_1.shape != lght_1.shape\n",
+    "assert vis1.shape != vil1.shape != lght1.shape\n",
     "# by interpolating the patch size all the image are the same shape\n",
-    "assert vis_2.shape == vil_2.shape == lght_2.shape\n",
-    "# the interpolated images are the same as the original images\n",
-    "assert np.all(np.stack([vis_2, vil_2, lght_2], axis=0) == stack)\n",
+    "assert vis2.shape == vil2.shape == lght2.shape\n",
+    "\n",
     "\n",
     "fig, ax = plt.subplots(2, 3, figsize=(20, 10))\n",
     "\n",
-    "ax[0, 0].set_title(f\"VIL {vil_1.shape}\")\n",
-    "ax[0, 0].imshow(vil_1[:, :, 0], **sevir.plot.with_kwargs(VIL, encoded=True))\n",
+    "ax[0, 0].set_title(f\"VIL {vil1.shape}\")\n",
+    "ax[0, 0].imshow(vil1[:, :, 0], **sevir.plot.with_kwargs(VIL, encoded=True))\n",
     "\n",
-    "ax[0, 1].set_title(f\"VIL {vis_1.shape}\")\n",
-    "ax[0, 1].imshow(vis_1[:, :, 0], **sevir.plot.with_kwargs(VIS, encoded=True))\n",
+    "ax[0, 1].set_title(f\"VIL {vis1.shape}\")\n",
+    "ax[0, 1].imshow(vis1[:, :, 0], **sevir.plot.with_kwargs(VIS, encoded=True))\n",
     "\n",
-    "ax[0, 2].set_title(f\"LGHT {lght_1.shape}\")\n",
-    "ax[0, 2].imshow(lght_1[:, :, 0], **sevir.plot.with_kwargs(LGHT, encoded=True))\n",
+    "ax[0, 2].set_title(f\"LGHT {lght1.shape}\")\n",
+    "ax[0, 2].imshow(lght1[:, :, 0], **sevir.plot.with_kwargs(LGHT, encoded=True))\n",
     "\n",
-    "ax[1, 0].set_title(f\"VIL {vil_2.shape}\")\n",
-    "ax[1, 0].imshow(vil_2[:, :, 0], **sevir.plot.with_kwargs(VIL, encoded=True))\n",
+    "ax[1, 0].set_title(f\"VIL {vil2.shape}\")\n",
+    "ax[1, 0].imshow(vil2[:, :, 0], **sevir.plot.with_kwargs(VIL, encoded=True))\n",
     "\n",
-    "ax[1, 1].set_title(f\"VIL {vis_2.shape}\")\n",
-    "ax[1, 1].imshow(vis_2[:, :, 0], **sevir.plot.with_kwargs(VIS, encoded=True))\n",
+    "ax[1, 1].set_title(f\"VIL {vis2.shape}\")\n",
+    "ax[1, 1].imshow(vis2[:, :, 0], **sevir.plot.with_kwargs(VIS, encoded=True))\n",
     "\n",
-    "ax[1, 2].set_title(f\"LGHT {lght_2.shape}\")\n",
-    "ax[1, 2].imshow(lght_2[:, :, 0], **sevir.plot.with_kwargs(LGHT, encoded=True))"
+    "ax[1, 2].set_title(f\"LGHT {lght2.shape}\")\n",
+    "ax[1, 2].imshow(lght2[:, :, 0], **sevir.plot.with_kwargs(LGHT, encoded=True))"
    ]
   },
   {
@@ -734,58 +733,28 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(3, 384, 384, 49)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.38 ms ± 190 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "9.56 ms ± 66.4 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "(3, 384, 384, 49) (3, 384, 384, 49) (3, 384, 384, 49) (Channel, Height, Width, Time)\n"
+     ]
     }
    ],
    "source": [
-    "stack.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((768, 768, 49), (384, 384, 49), (384, 384, 49))"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vis2.shape, vil_2.shape, lght_2.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2, 384, 384, 49)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.concatenate([vis_2[np.newaxis], vil_1[np.newaxis]], axis=0).shape  # (Channel, Height, Width, Time)"
+    "%timeit np.concatenate([vis2[np.newaxis], vil2[np.newaxis], lght2[np.newaxis]], axis=0)\n",
+    "%timeit np.stack([vis2, vil2, lght2], axis=0)\n",
+    "stack2 = np.stack([vis2, vil2, lght2], axis=0)\n",
+    "stack3 = np.concatenate([vis2[np.newaxis], vil2[np.newaxis], lght2[np.newaxis]], axis=0)\n",
+    "\n",
+    "assert np.all(stack1 == stack2) and np.all(stack2 == stack3) and np.all(stack1 == stack3)\n",
+    "print(\n",
+    "    stack1.shape,\n",
+    "    stack2.shape,\n",
+    "    stack3.shape,\n",
+    "    \"(Channel, Height, Width, Time)\",\n",
+    ")"
    ]
   },
   {
@@ -797,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +774,7 @@
      "output_type": "stream",
      "text": [
       "INFO:root:Loading 81 files with 1 image types.\n",
-      "100%|██████████| 81/81 [00:00<00:00, 98.03it/s] \n",
+      "100%|██████████| 81/81 [00:02<00:00, 35.47it/s]\n",
       "INFO:matplotlib.animation:Animation.save using <class 'matplotlib.animation.ImageMagickWriter'>\n",
       "INFO:matplotlib.animation:MovieWriter._run: running command: convert -size 640x480 -depth 8 -delay 16.666666666666668 -loop 0 rgba:- -layers OptimizePlus assets/S858968-vis.gif\n"
      ]
@@ -817,7 +786,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -866,9 +835,9 @@
      "output_type": "stream",
      "text": [
       "INFO:root:Loading 101 files with 3 image types.\n",
-      "100%|██████████| 101/101 [00:01<00:00, 60.89it/s]\n",
+      "100%|██████████| 101/101 [00:01<00:00, 66.41it/s]\n",
       "INFO:root:Loading 10 files with 1 image types.\n",
-      "100%|██████████| 10/10 [00:00<00:00, 65.03it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 29.80it/s]\n",
       "INFO:root:🏪 Closing Store 🏪\n"
      ]
     },
@@ -891,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -899,11 +868,11 @@
      "output_type": "stream",
      "text": [
       "INFO:root:Loading 101 files with 3 image types.\n",
-      "100%|██████████| 101/101 [00:01<00:00, 86.70it/s]\n",
+      "100%|██████████| 101/101 [00:01<00:00, 86.40it/s]\n",
       "INFO:root:Loading 10 files with 1 image types.\n",
-      "100%|██████████| 10/10 [00:00<00:00, 82.07it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 72.92it/s]\n",
       "INFO:root:🏃 Iterating over Dataset 🏃\n",
-      "  0%|          | 14/12741 [00:33<8:23:05,  2.37s/it]\n",
+      "  0%|          | 14/12741 [00:33<8:25:37,  2.38s/it]\n",
       "INFO:root:🏪 Closing Store 🏪\n"
      ]
     },
