--- a/notebooks/1-sevir-dataset.ipynb
+++ b/notebooks/1-sevir-dataset.ipynb
@@ -47,7 +47,7 @@
     "case an environment variable can be set and the application will find the data.\n",
     "\n",
     "```bash\n",
-    "ls /mnt/data/c/sevir/\n",
+    "ls /mnt/data/sevir/\n",
     "CATALOG.csv  data\n",
     "```"
    ]
